fix header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 5;
+	z-index: 7;
 }
 
 .header__title {
